[gd_scene load_steps=4 format=3 uid="uid://csgbxt1niv7wu"]

[ext_resource type="Texture2D" uid="uid://yjq3u7c05rny" path="res://assets/32x32.png" id="1_cqy5p"]
[ext_resource type="Script" uid="uid://cjm0o5g1wlyfj" path="res://scenes/Items/nullify_death.gd" id="2_p38jb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vik26"]
size = Vector2(32, 32)

[node name="NullifyDeath" type="Sprite2D"]
z_index = -1
position = Vector2(0, -16)
texture = ExtResource("1_cqy5p")
region_enabled = true
region_rect = Rect2(448, 1696, 32, 32)
script = ExtResource("2_p38jb")

[node name="DescriptionTriggerArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DescriptionTriggerArea2D"]
shape = SubResource("RectangleShape2D_vik26")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -85.0
offset_top = -46.0
offset_right = -17.0
offset_bottom = 11.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Nullify your
next death"

[node name="Label2" type="Label" parent="."]
visible = false
offset_left = -85.0
offset_top = -7.0
offset_right = -17.0
offset_bottom = 50.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "
"

[connection signal="body_entered" from="DescriptionTriggerArea2D" to="." method="_on_description_trigger_area_2d_body_entered"]
[connection signal="body_exited" from="DescriptionTriggerArea2D" to="." method="_on_description_trigger_area_2d_body_exited"]
